// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template.html - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<script id="entry-template" type="text/x-handlebars-template">
<div class="entry">
<h1>{{title}}</h1>
<div class="body">{{body}}</div></div>
</script>

<script type="text/x-handlebars-template">
  {{component arg1='hey' arg2=(helper this.arg7 this.arg4) arg3=anotherone arg6=this.arg8}}
</script>

=====================================output=====================================
<script id="entry-template" type="text/x-handlebars-template">
  <div class='entry'>
    <h1>{{title}}</h1>
    <div class='body'>{{body}}</div></div>
</script>

<script type="text/x-handlebars-template">
  {{component
    arg1='hey'
    arg2=(helper this.arg7 this.arg4)
    arg3=anotherone
    arg6=this.arg8
  }}
</script>

================================================================================
`;

exports[`template.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<script id="entry-template" type="text/x-handlebars-template">
<div class="entry">
<h1>{{title}}</h1>
<div class="body">{{body}}</div></div>
</script>

<script type="text/x-handlebars-template">
  {{component arg1='hey' arg2=(helper this.arg7 this.arg4) arg3=anotherone arg6=this.arg8}}
</script>

=====================================output=====================================
<script id="entry-template" type="text/x-handlebars-template">
  <div class="entry">
    <h1>{{title}}</h1>
    <div class="body">{{body}}</div></div>
</script>

<script type="text/x-handlebars-template">
  {{component
    arg1="hey"
    arg2=(helper this.arg7 this.arg4)
    arg3=anotherone
    arg6=this.arg8
  }}
</script>

================================================================================
`;
